index.html::mise à jour du code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="btn">
-        <a href="#">Hover</a>
+        <a href="https://www.google.fr/" target="_blank">Hover</a>
     </div>
     
 </body>
